OVERLAP ISSUES | name card and tray overlap issues now solved

--- a/src/components/video_chat/Tile/Tile.scss
+++ b/src/components/video_chat/Tile/Tile.scss
@@ -76,7 +76,7 @@
   position: absolute;
   bottom: 12.5px;
   left: 6px;
-  z-index: 2;
+  z-index: 1;
 }
 
 .mute-others-icon:active {
