--- a/src/components/video_chat/Tray/Tray.scss
+++ b/src/components/video_chat/Tray/Tray.scss
@@ -15,6 +15,7 @@
   position: absolute;
   width: 100%;
   bottom: 5px;
+  z-index: 2;
 }
 
 .artist-mute-all-button {
